[package]
name = "rust_battleships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
regex = "1.9.5"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
